force-app/main/default/objects/Recipe_amount__c/Recipe_amount__c.object-meta.xml
<CustomObject>
    <label>Recipe amount</label>
    <nameField>
        <label>Recipe amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe amounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>