force-app/main/default/objects/Recipe_amount__c/fields/External_ingridient__c.field-meta.xml
<CustomField>
    <fullName>External_ingridient__c</fullName>
    <label>External ingridient</label>
    <length>80</length>
    <type>Text</type>
</CustomField>