force-app/main/default/objects/Recipe_amount__c/fields/Ingridient_amount__c.field-meta.xml
<CustomField>
    <fullName>Ingridient_amount__c</fullName>
    <label>Ingredient amount</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>