force-app/main/default/objects/Recipe_amount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recipe amounts</relationshipLabel>
    <relationshipName>Recipe_amounts</relationshipName>
    <type>Lookup</type>
</CustomField>