force-app/main/default/objects/Recipe_amount__c/fields/Recipe_amount_number__c.field-meta.xml
<CustomField>
    <fullName>Recipe_amount_number__c</fullName>
    <displayFormat>RAMNT-{0000}</displayFormat>
    <label>Recipe amount number</label>
    <type>AutoNumber</type>
</CustomField>