force-app/main/default/objects/Recipe_amount__c/fields/Unit_of_measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_measurement__c</fullName>
    <label>Unit of measurement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units_of_measurements_picklist</valueSetName>
    </valueSet>
</CustomField>